refactorizacion de codigo

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -14,5 +14,10 @@ $complemento3: #ebe4e4;
 
 //tamaños de fuente
 
-$tamaño1 : 1.2em
+$tamaño1      : 1.2em;
+$tamañoTitulo : 2.5em;
+
+//Tipografía
+
+$fontPrincipal: 'Roboto', sans-serif;
 
