--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -5,3 +5,10 @@
 ul {
     padding-inline-start: 0px;
 }
+
+
+.home__title {
+    font-family: $fontPrincipal;
+    font-size: $tamañoTitulo;
+    font-weight: 500;
+}
