--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,4 +4,5 @@
 // componentes
 @import './components/navbar';
 @import './components/pestañas';
-@import './components/home'
+@import './components/home';
+@import './components/perfil';
