--- a/src/styles/components/_pestañas.scss
+++ b/src/styles/components/_pestañas.scss
@@ -8,9 +8,11 @@
   position: relative;
   padding: 2px 5px 0px 5px;
   width: 120px;
+  margin-left: 20px;
 }
 .pestañas__item:first-child {
   padding-left: 0px;
+  margin-left: 0px;
 }
 .item__boton {
   padding: 5px 10px;
@@ -18,9 +20,12 @@
   border-radius: 0px;
   border: none;
   font-size: 1em;
-  transition: 400ms;
+  transition: 500ms;
   text-decoration: none;
-  display: inline-block;
+  // display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 120px;
   height: 30px;
   text-align: center;
@@ -30,12 +35,14 @@
   color: white;
 }
 .pestaña__menu-despegable {
+  
   margin-top: 8px;
   list-style: none;
   display: none;
   position: absolute;
-  top: 42px;
-  left: 30px;
+  top: 34px;
+  // left: 10px;
+  border: 1px solid #cfcfcf;
   background: #eee;
   padding: 0;
   a {
@@ -45,7 +52,9 @@
 }
 .pestaña__menu-despegable li {
   float: none;
-  width: 150px;
+  width: 210px;
+  padding: 0.3em;
+
 }
 
 ul li:hover ul {
