se hace la vista de preguntas frecuentes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,4 +8,6 @@
 @import './components/perfil';
 @import './components/login';
 @import './components/estudiante';
+@import './components/preguntasFrecuentes';
+
 
