--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,3 +12,21 @@ html, body {
 main {
     width: 100%;
 }
+
+.box {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 40vw;
+    border-radius: 10px;
+    border: 1px solid $complemento;
+    padding: 2em;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    background-color: $grisClaro;
+}
+.content-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
