--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,5 +9,7 @@
 @import './components/login';
 @import './components/estudiante';
 @import './components/preguntasFrecuentes';
+@import './components/evaluacion';
+
 
 
