se termina creacion del pqr y se conecta con frontend

--- a/src/styles/components/_evaluacion.scss
+++ b/src/styles/components/_evaluacion.scss
@@ -5,7 +5,9 @@
 }
 .header__derecha {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    align-items: center;
     width: 38%;
 }
 .icon__header {
