--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,8 @@
 @import './components/estudiante';
 @import './components/preguntasFrecuentes';
 @import './components/evaluacion';
+@import './components/pqr';
+
 
 
 
