--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -11,4 +11,6 @@ ul {
     font-family: $fontPrincipal;
     font-size: $tamañoTitulo;
     font-weight: 500;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
