--- a/src/styles/components/_pestañas.scss
+++ b/src/styles/components/_pestañas.scss
@@ -47,7 +47,9 @@
   padding: 0;
   a {
     text-decoration: none;
-    padding: 0px 20px;
+    padding: 0px 5px;
+    width: 100%;
+    
   }
 }
 .pestaña__menu-despegable li {
