se hacen correcciones de diseño y se ajusta para la sustentacion

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -12,5 +12,5 @@ ul {
     font-size: $tamañoTitulo;
     font-weight: 500;
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 2rem;
 }
