--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,6 +11,8 @@
 @import './components/preguntasFrecuentes';
 @import './components/evaluacion';
 @import './components/pqr';
+@import './components/planEstudio';
+
 
 
 
