--- a/src/styles/components/_perfil.scss
+++ b/src/styles/components/_perfil.scss
@@ -3,9 +3,10 @@
     padding: 0px 10vw;
     display: flex;
     flex-direction: column;
-    
+    margin-top: 2em;
 }
 .container__text {
+    margin-top: 2em;
     background-color: $grisClaro;
 }
 
