--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,6 +1,6 @@
 .home__pestañas {
     margin-top: 20px;
-    padding: 0px 10vw;
+    padding: $paddingIndex;
 }
 ul {
     padding-inline-start: 0px;
