--- a/src/styles/components/_perfil.scss
+++ b/src/styles/components/_perfil.scss
@@ -1,6 +1,6 @@
 
 .perfil-container {
-    padding: 0px 10vw;
+    padding: $paddingIndex;
     display: flex;
     flex-direction: column;
     margin-top: 2em;
